tests/snapshots/integration__env__env_choice.snap
---
source: tests/env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: invalid value `val` for environment variable `TEST_ECA`
  [possible values: a, b]


# BUILD_OUTPUT
error: invalid value `val` for environment variable `TEST_ECA`
  [possible values: a, b]
