tests/snapshots/integration__env__env_choice_fn.snap
---
source: tests/env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: invalid value `val` for environment variable `TEST_EFA`
  [possible values: abc, def, ghi]


# BUILD_OUTPUT
error: invalid value `val` for environment variable `TEST_EFA`
  [possible values: abc, def, ghi]
