tests/snapshots/integration__env__env_help.snap
---
source: tests/env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
All kinds of @env

USAGE: envs <COMMAND>

COMMANDS:
  run

ENVIRONMENTS:
  TEST_EA   optional
  TEST_EB*  required
  TEST_EDA  default [default: a]
  TEST_EDB  default from fn
  TEST_ECA  choice [possible values: a, b]
  TEST_ECB  choice + default [possible values: a, b] [default: a]
  TEST_EFA  choice from fn



# BUILD_OUTPUT
All kinds of @env

USAGE: envs <COMMAND>

COMMANDS:
  run

ENVIRONMENTS:
  TEST_EA   optional
  TEST_EB*  required
  TEST_EDA  default [default: a]
  TEST_EDB  default from fn
  TEST_ECA  choice [possible values: a, b]
  TEST_ECB  choice + default [possible values: a, b] [default: a]
  TEST_EFA  choice from fn
