tests/snapshots/integration__env__env_help_subcmd.snap
---
source: tests/env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
USAGE: envs run

ENVIRONMENTS:
  TEST_EB*  required
  TEST_EDA  default [default: a]
  TEST_EDB  default from fn
  TEST_ECA  choice [possible values: a, b]
  TEST_ECB  choice + default [possible values: a, b] [default: a]
  TEST_EFA  choice from fn
  TEST_EA   override
  TEST_NEW  append



# BUILD_OUTPUT
USAGE: envs run

ENVIRONMENTS:
  TEST_EB*  required
  TEST_EDA  default [default: a]
  TEST_EDB  default from fn
  TEST_ECA  choice [possible values: a, b]
  TEST_ECB  choice + default [possible values: a, b] [default: a]
  TEST_EFA  choice from fn
  TEST_EA   override
  TEST_NEW  append
