tests/snapshots/integration__env__env_missing.snap
---
source: tests/env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: the following required environments were not provided:
  TEST_EB


# BUILD_OUTPUT
error: the following required environments were not provided:
  TEST_EB
