tests/snapshots/integration__env__env_run.snap
---
source: tests/env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
TEST_EB=1
TEST_ECB=a
TEST_EDA=a
TEST_EDB=argc


# BUILD_OUTPUT
TEST_EB=1
TEST_ECB=a
TEST_EDA=a
TEST_EDB=argc
